Test sdist install in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,8 @@ before_install:
     fi
 
 install:
-  - python setup.py install
+  - python setup.py sdist
+  - pip install dist/*.tar.gz
   - pip install nose flake8 hacking mock
 
 script:
